--- a/zxinglibrary/src/main/res/layout/fragment_capture.xml
+++ b/zxinglibrary/src/main/res/layout/fragment_capture.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <SurfaceView
         android:id="@+id/preview_view"
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-    <com.uuzuche.lib_zxing.view.ViewfinderView
+    <com.kuro.zxinglibrary.view.ViewfinderView
         android:id="@+id/viewfinder_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
